lib/nails_derive/tests/ui/from-request-position-field-missing-kinds.stderr
error: Specify name with #[nails(query = "")] or alike
 --> $DIR/from-request-position-field-missing-kinds.rs:6:5
  |
6 |     String,
  |     ^^^^^^
