lib/nails_derive/tests/ui/from-request-position-field-missing-kinds.rs
use nails_derive::FromRequest;

#[derive(FromRequest)]
#[nails(path = "/api/posts/{id}")]
pub struct GetPostRequest(
    String,
);

fn main() {}
